client/style/stylesheet.css
*{
    box-sizing: border-box;
    padding:0;
    margin: 0;
}

html{
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
}

body{
    padding: 0;
    margin: auto;
    width: 100%;
    max-width: 100vh;
    min-height: 100%;
    background-color: black;
    color: rgb(232,232,232);
    font-family: monospace;
}

form{
    display: flex;
    flex-grow: 1;
}

input{
    display: block;
    padding: 5px 10px;
    border: none;
    font-family: monospace;
}

#map, #chat, #hud{
    display: flex;
    width: 50vh;
    margin: auto;
}

#hud{
    height: 10vh;
    background-color: gray;
}

.readout{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-radius: 5px;
    background-color: rgb(32,32,32);
    flex-grow: 1;
    margin: 10px;
    padding: 5px;
    text-align: center;
    font-size: x-large;
}

#ui_orange{
    border: 2px solid rgb(232, 160, 32);
}

#ui_timer{
    border: 2px solid rgb(160,160,160);
}

#ui_green{
    border: 2px solid rgb(64, 200, 72);;
}

#map{    
    flex-wrap: wrap;
    padding: 4px;
    height: 50vh;
    background-color: rgb(96,96,96);
}

.cell{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2px;
    padding: 0;
    border-radius: 5px;
    flex-shrink: 0;
    flex-grow: 0;
    font-style: monospace;
    font-size: small;
    color:white;
    text-shadow: 0 0 2px black;
    transition: border-radius .15s ease;
}

.open{
    background-color: rgb(176, 176, 176);
}

.blocked{
    background-color: rgb(32,32,32);
}

.orange{
    background-color: rgb(232, 160, 32);
}

.green{
    background-color: rgb(64, 200, 72);
}

.stone{
    border-radius: 50%;
    box-shadow: 0 0 0 1px white;
    background-color: rgb(96, 94, 94);
}

.free-neighbor{
    cursor: pointer;
    box-shadow: 0 0 0 1px white;
}

.free-neighbor:hover{
    border-radius: 50%;
}

#chat{
    height: 40vh;
    flex-direction: column;
    border-left: 1px solid rgb(96,96,96);
    border-right: 1px solid rgb(96,96,96);
}

#chat_output{
    position: relative;
    flex-basis: calc(100% - 30px);
    background-color: rgb(32,32,32);
    overflow: hidden;
    padding: 5px;
}

#chat_output::after{
    position: absolute;
    height: 25%;
    width: 100%;
    bottom: 0;
    left: 0;
    background: linear-gradient(to top, rgb(24,24,24), transparent);
    content: "";
}

#chat_name{
    width: 25%;
    border-top: 1px solid gray;
    border-right: 1px solid gray;
    color: rgb(12,12,12);
    font-weight: bold;
}

#chat_input{
    flex-grow: 1;
    border-top: 1px solid gray;
    background-color: rgb(48,48,48);
    color: rgb(232,232,232);
}

#chat_send{
    border-top: 1px solid gray;
    border-left: 1px solid gray;
    cursor: pointer;
    background-color: rgb(32,32,32);
    color: rgb(232,232,232);
}

.message{
    margin-bottom: 5px;
}

.name{
    display: inline-block;
    padding: 5px;
    margin-right: 5px;
    border-radius: 5px;
    color: rgb(12,12,12);
    font-weight: bold;
}

.info{
    background-color: rgb(88, 100, 232);
}

.success{
    background-color: rgb(128, 255, 128);
}

.warning{
    background-color: rgb(255, 96, 64);
}

